Tue Jan 25 14:59:05 2000  Lars Wirzenius  <liw@wapit.com>

	* utils/seewbmp.c: Added to CVS. Simple debugging tool written by
	Richard Braakman.
	
	* Makefile.in: Related changes.

2000-01-25    <rpr@rpr.wapit.com>

	* gw/bb_msg.c: Fixed error in rq_pull_smg_class, which caused
	failure with 2 wapboxes. Hopefully did not break SMS portion.

	* gw/csdr.c: commented out octstr_dump of each incoming message

	* gw/*.*conf: edited them so that no-one can use them without
	editing, should handle loads of basic questions in devel-list

	* gw/*box.c: put an appropriate error message

2000-01-25    <rpr@rpr.wapit.com>

	* gw/bearerbox.c: One fix more, now the internal smsbox does not
	consume all the CPU it can

2000-01-25    <rpr@rpr.wapit.com>

	* gw/bearerbox.c: Some optimization to queue watchers, now it
	should not do updates with no effect, hopefully reducing CPU usage
	in a long run.

Mon Jan 24 21:23:43 2000  Lars Wirzenius  <liw@wapit.com>

	* README: Updated a bit.

Mon Jan 24 21:01:50 2000  Lars Wirzenius  <liw@wapit.com>

	* Makefile.in: Fixed install target.
	
	* VERSION: Marked as non-release version.

Mon Jan 24 20:53:47 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wsp.c, gw/wsp.h, gw/wsp_events-decl.h, wsp_state-decl.h:
	WSP now obeys client SDU size limit. Had to add a pointer to
	the session machine to a WSP event, which caused non-local
	trivial changes.

2000-01-24	Sanna Seppanen <sanna@wapit.com>
	*gwlib/http.h: function added: header_dump.
	*gwlig/http.c: implementation of header_dump
	

Mon Jan 24 19:06:58 2000  Lars Wirzenius  <liw@wapit.com>

	* configure.in, configure: Look for -lresolv if it is necessary.
	(From Derry Hamilton <derry.hamilton@pa.press.net>)
	
	* gwlib/socket.c: Portability kludge for Solaris. Should be fixed
	later. (Likewise from Derry.)
	
	* test/fakewap.c: Moved definition of `ret' inside #ifdef so that
	it doesn't cause an "unused variable" warning.

2000-01-24    <rpr@rpr.wapit.com>
