@@ -152,11 +152,89 @@ ROW(CONNECTED,
 
 ROW(CONNECTED,
 	TRInvokeIndication,
+	e->tcl == 2 && wsp_deduce_pdu_type(e->user_data, 0) == Post_PDU &&
+	sm->n_methods == 0 /* XXX check max from config */,
+	{
+		WSPEvent *new_event;
+		Octstr *url;
+		Octstr *headers;
+
+		++sm->n_methods;
+
+		debug(0, "WSP: Post Request received");
+		if (unpack_post_pdu(&url, &headers, e->user_data) == -1)
+			error(0, "Unpacking Post PDU failed, oops.");
+		else {
+			debug(0, "WSP: sending Release to ourselves");
+			new_event = wsp_event_create(Release);
+			new_event->Release.machine = e->machine;
+			new_event->Release.url = url;
+			wsp_handle_event(sm, new_event);
+		}
+
+	},
+	HOLDING)
+
+ROW(CONNECTED,
+	TRInvokeIndication,
 	e->tcl == 0 && wsp_deduce_pdu_type(e->user_data, 0) == Disconnect_PDU,
 	{
 		debug(0, "WSP: Got Disconnect PDU.");
 	},
 	NULL_STATE)
+
+ROW(CONNECTED,
+	TRInvokeIndication,
+	wsp_deduce_pdu_type(e->user_data, 0) == Connect_PDU,
+	{
+		WTPEvent *wtp_event;
+		Octstr *pdu;
+		
+		debug(0, "WSP: Got Reconnect PDU.");
+		/* Send Disconnect event to existing sessions for client. */
+
+		/* Invent a new session ID since we're now the official
+		 * session for this client. 
+		 */
+		/* Make a TR-Result.req event for WTP. */
+		wtp_event = wtp_event_create(TRAbort);
+		wtp_event->TRResult.tid = e->machine->tid;
+		wtp_event->TRResult.user_data = pdu;
+		debug(0, "WSP: Try Killing WTP....");
+		wtp_handle_event(e->machine, wtp_event);
+
+	},
+	NULL_STATE)
+
+ROW(CONNECTED,
+	TRInvokeIndication,
+	wsp_deduce_pdu_type(e->user_data, 0) == Resume_PDU,
+	{
+		WTPEvent *wtp_event;
+		Octstr *pdu;
+		
+		
+		/* Send Disconnect event to existing sessions for client. */
+
+		/* Invent a new session ID since we're now the official
+		 * session for this client. 
+		 */
+		sm->session_id = wsp_next_session_id();
+		debug(0, "WSP: Resuming ...Session ID is %ld", sm->session_id);
+
+		/* Make a ConnectReply PDU for WSP. */
+		pdu = make_connectreply_pdu(sm, sm->session_id);
+
+		/* Make a TR-Result.req event for WTP. */
+		wtp_event = wtp_event_create(TRResult);
+		wtp_event->TRResult.tid = e->machine->tid;
+		wtp_event->TRResult.user_data = pdu;
+		debug(0, "WSP: Resuming ...sending TR-Result.req event to old WTPMachine");
+		wtp_handle_event(e->machine, wtp_event);
+
+		/* Release all method transactions in HOLDING state. */
+	},
+	CONNECTED)
 
 ROW(HOLDING,
 	Release,
